--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 html,
 body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 100%;
   height: 100%;
   overflow: hidden;
 }
@@ -15,19 +18,11 @@ body {
 section {
   position: relative;
   text-align: center;
-  min-height: 300px;
-  max-height: 700px;
-  height: 80%;
+  height: 500px;
 }
 
-::scrollbar {
+.Loop::-webkit-scrollbar {
   display: none;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 100%;
 }
 
 .red {
